<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/top_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="#000000"
                    android:padding="16dp"
                    android:text="@string/intro_name"
                    android:textColor="#cc0066"
                    android:textSize="28sp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/edt_name_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/reg_hint_name"
                        android:inputType="textPersonName"
                        android:textColor="@color/grey_500"
                        android:textColorHint="@android:color/white" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/edt_phone_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:digits="0123456789"
                        android:hint="@string/reg_hint_phone"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:textColor="@color/grey_500"
                        android:textColorHint="@android:color/white" />
                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:layout_margin="16dp"
                    android:text="@string/reg_btn_register"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="48dp"
                    android:text="@string/old_user"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:text="@string/login"
                    android:textColor="@android:color/white" />


            </LinearLayout>

        </RelativeLayout>


    </ScrollView>

</LinearLayout>




