<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical"
   android:padding="10dp">

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_name"
                android:singleLine="true"
                android:textSize="16sp"
                android:padding="8dp"
                android:layout_margin="10dp"
                android:inputType="textPersonName"
                />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:padding="8dp"
                android:maxLines="1"
                android:layout_margin="10dp"
                 />

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/white_color"
                android:text="@string/action_sign_in_short"
                android:background="@color/active_color"

                />

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_register_short"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/white_color"
                android:background="@color/grey_color"/>



        </LinearLayout>

</LinearLayout>
